Increase sticky header z-index to ensure it stays on top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,7 +295,7 @@ label {
   right: 30px;
   font-size: 16px;
   border-radius: 50%;
-  z-index: 9999;
+  z-index: 99999;
   color: #fff;
   text-align: center;
   cursor: pointer;
